# stt-cli

./: .gitignore  README.md  pyproject.toml
stt_cli/: __init__.py  audio_processor.py  main.py  output_formatter.py  speech_client.py
tests/: __init__.py  test_audio_processor.py  test_cli.py  test_output_formatter.py
